UI alignment fix for "end point assessment"

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
@@ -444,4 +444,8 @@ aside h2:first-child {
     .btn-find-trng-prov{
         margin-top:30px;
     }
+    .text-copy{
+       float: right;
+       width:70%;
+    }
 }
